--- a/client/views/home.html
+++ b/client/views/home.html
@@ -6,15 +6,7 @@
   </div>
   <div class="span6">
     {{#each decks}}
-    <div class="media">
-      <a class="pull-left decklink" href="/deck/{{_id}}">
-        <img src="http://api.qrserver.com/v1/create-qr-code/?data=http://presenteract.meteor.com/deck/{{_id}}&size=100x100" alt="qrcode to deck">
-      </a>
-      <div class="media-body">
-        <h4>{{title}}</h4>
-        <p class="muted">{{short}}</p>
-      </div>
-    </div>
+      {{> deckNodePublic}}
     {{/each}}
   </div>
 </div>
