--- a/client/views/deckEdit.html
+++ b/client/views/deckEdit.html
@@ -10,13 +10,30 @@
 <h4>Slides ({{slidesCount}})</h4>
 <ul class="thumbnails">
 {{#each slides}}
+  {{> _editSlideThumb}}
+{{/each}}
+</ul>
+
+<p>
+  <a href="#" class="newSlide btn btn-success"><i class="icon-plus icon-white"></i> Add Slide</a>
+</p>
+
+
+</template>
+
+
+
+
+<template name="_editSlideThumb">
 <li class="thumbnail span4 slide-thumb" style="overflow: hidden;">
   <strong href="#" class="slide-eip" data-pk="{{_id}}"
     data-type="text" data-inputclass="input-medium"
     data-name="title" data-mode="inline" title="Title"
     >{{title}}</strong>
+  {{#if withPoll}}
+    <span data-toggle="tooltip" title="Has a Poll"><i class="icon-flag"></i></span>
+  {{/if}}
   <div class="pull-right hide edit-icons">
-    <a href="#" class="deleteSlide" data-toggle="tooltip" title="delete slide"><i class="icon-remove"></i></a>
     <a href="/deckEditSlide/{{deckId}}/{{_id}}" data-toggle="tooltip" title="edit slide content"><i class="icon-edit"></i></a>
     <a href="#" class="moveSlideUp" data-toggle="tooltip" title="move up"><i class="icon-arrow-up"></i></a>
     <a href="#" class="moveSlideDown" data-toggle="tooltip" title="move up"><i class="icon-arrow-down"></i></a>
@@ -27,34 +44,4 @@
     data-name="short" data-mode="inline" title="Short"
     >{{short}}</span>
 </li>
-{{/each}}
-</ul>
-
-<p>
-  <a href="#" class="newSlide btn btn-success"><i class="icon-plus icon-white"></i> Add Slide</a>
-</p>
-
-{{#if getSession 'confirmSlideDeletion'}}
-{{> confirmSlideDeletion}}
-{{/if}}
-
 </template>
-
-
-<template name="confirmSlideDeletion">
-<div class="modal fade confirmSlideDeletion">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Delete Slide</h3>
-  </div>
-  <div class="modal-body">
-    <strong>{{slide.title}}</strong><br>
-    <p class="muted">{{slide.short}}</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn cancel">Cancel</a>
-    <a href="#" class="btn btn-primary">Delete Slide</a>
-  </div>
-</div>
-</template>
-
