--- a/client/views/editPoll.html
+++ b/client/views/editPoll.html
@@ -12,6 +12,10 @@
         <span class="option_text" data-pk="{{_id}}" data-type="text" data-name="text">{{text}}</span>
       </td>
       <td>
+        <span style="display: inline-block; width: 15px; margin-left: 8px; background-color: #{{color}}">&nbsp;</span>
+        <span class="option_text" data-pk="{{_id}}" data-type="text" data-name="color">{{color}}</span>
+      </td>
+      <td>
         <a href="#" class="removePollOption "><i class="icon-remove"></i></a>
       </td>
     </tr>
