finishing touches done

--- a/client/views/deckView.html
+++ b/client/views/deckView.html
@@ -14,17 +14,18 @@
 
 {{/with}}
 
+{{#if isOwner}}
 <div class="deck-presenter-area">
   <ul class="thumbnails">
     {{#each slides}}
-    <li class="thumbnail span2" style="height: 90px; overflow: hidden;">
+    <li class="thumbnail span2" style="height: 60px; overflow: hidden;">
       <strong><a href="#setSlide" class="setSlide" data-id="{{_id}}">{{title}}</a></strong><br>
       <span class="muted">{{safe 'short'}}</span>
     </li>
     {{/each}}
   </ul>
 </div>
-
+{{/if}}
 
 </template>
 
