Interface revisions (presenter & audience)
Trying to clean up for Apple Store App submision

--- a/client/views/_deckNodePublic.html
+++ b/client/views/_deckNodePublic.html
@@ -12,7 +12,7 @@
       </span>
       {{/if}}
     </h4>
-    <p class="muted">{{short}}</p>
+    <p class="muted">{{safe 'short'}}</p>
   </div>
 </div>
 </template>
