--- a/client/views/deckView.html
+++ b/client/views/deckView.html
@@ -11,14 +11,18 @@
   {{> slideView}}
 </div>
 
-
-{{/with}}
-
 {{#if isOwner}}
-<div class="deck-presenter-area">
+<div class="deck-presenter-area well">
+  {{#if prevSlideId}}
+  <a href="#setSlide" class="setSlide" data-id="{{prevSlideId}}"><i class="icon-arrow-left"></i></a>
+  {{/if}}
+  <strong>on slide {{currentSlideInt}} out of {{slidesCount}}</strong>
+  {{#if nextSlideId}}
+  <a href="#setSlide" class="setSlide" data-id="{{nextSlideId}}"><i class="icon-arrow-right"></i></a>
+  {{/if}}
   <ul class="thumbnails">
     {{#each slides}}
-    <li class="thumbnail span2" style="height: 60px; overflow: hidden;">
+    <li class="thumbnail span2" style="height: 60px; overflow: hidden; background-color: white;">
       <strong><a href="#setSlide" class="setSlide" data-id="{{_id}}">{{title}}</a></strong><br>
       <span class="muted">{{safe 'short'}}</span>
     </li>
@@ -26,6 +30,8 @@
   </ul>
 </div>
 {{/if}}
+
+{{/with}}
 
 </template>
 
