--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,13 +1,25 @@
 <template name="home">
-<h1>Interactive Presentations</h1>
+{{#if decks}}
+  <h2>Open Presentations</h2>
+  {{#each decks}}
+    {{> deckNodePublic}}
+  {{/each}}
+{{/if}}
+
+<div class="row">
+  <div class="span12">
+    <h1 class="pull-left">Interactive Presentations</h1>
+    <img src="/icon.png" alt="Logo" class="pull-left">
+  </div>
+</div>
+
 <div class="row">
   <div class="span6">
-    <p class="lead">Simple slideshows via the web, in sync on the phone/tablet/computer of audience members.</p>
+    <p class="lead">
+      Simple slideshows via the web, in sync on the phone/tablet/computer of audience members.
+    </p>
   </div>
   <div class="span6">
-    {{#each decks}}
-      {{> deckNodePublic}}
-    {{/each}}
   </div>
 </div>
 
