about and footer content

--- a/client/views/about.html
+++ b/client/views/about.html
@@ -13,4 +13,39 @@
 <h2>Help / Contact</h2>
 <p><a href="https://github.com/zeroasterisk/Presenteract/issues">Bug Reports and Feature Requests</a> are available.  If there is a significant need, we will improve this to a knowledge base.</p>
 <p>Developers, the code is available on <a href="https://github.com/zeroasterisk/Presenteract">GitHub</a></p>
+<h2>Built With</h2>
+<div class="row">
+  <div class="span4">
+    <h3><a href="http://meteor.com">MeteorJS</a></h3>
+    <p>Wow. At every step of the way I've been impressed by MeteorJS.  The framework is exception in the functionality it provides users in the application.  It is also very easy to work in and includes tons of tools for developers.</p>
+  </div>
+  <div class="span4">
+    <h3><a href="http://phonegap.com">PhoneGap</a></h3>
+    <p>PhoneGap is an excellent project, wrapping web applications into mobile device "apps".</p>
+  </div>
+  <div class="span4">
+    <h3><a href="http://twitter.github.io/">Twitter Bootstrap</a></h3>
+    <p>This Excellent and Prolific CSS framework makes createing attractive, standardized, responsive, and very functional web applications easy.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="span4">
+    <h4><a href="http://jQuery.com">jQuery</a></h4>
+    <p>Who doesn't use jQuery?  In fact, we don't use it a ton, because MeteorJS does most of the lifting, but we still use jQuery to work with the DOM a bit.</p>
+  </div>
+  <div class="span4">
+    <h4><a href="http://underscorejs.com">UnderscoreJS</a></h4>
+    <p>The underscore library is a very handy JavaScript toolbox...  Don't leave home without it.</p>
+  </div>
+  <div class="span4">
+    <h4><a href="http://www.chartjs.org/">ChartJS</a></h4>
+    <p>A simple, clean, attractive and super-fast JS library for rendering HTML charts.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="span4">
+    <h4><a href="http://vitalets.github.io/x-editable/">X-Editable</a></h4>
+    <p>For the admin interface, we have a "Click to Edit" or "Edit in Place" interface provided by X-Editable.  It rocks!</p>
+  </div>
+</div>
 </template>
