minor footer/about updates

--- a/client/views/about.html
+++ b/client/views/about.html
@@ -25,7 +25,7 @@
 <p><a href="https://github.com/zeroasterisk/Presenteract/issues">Bug Reports and Feature Requests</a> are available.  If there is a significant need, we will improve this to a knowledge base.</p>
 <p>Developers, the code is available on <a href="https://github.com/zeroasterisk/Presenteract">GitHub</a>. Pull Requests are appriciated.</p>
 
-<h2>Built With</h2>
+<h2 id="built-with">Built With</h2>
 <div class="row">
   <div class="span4">
     <h3><a href="http://meteor.com">MeteorJS</a></h3>
